# ai-flashcard-generator

./: .env  .gitignore  README.md  flashcards.json  main.py  notes.txt  pyproject.toml  transcript.txt  utils.py
temp/: Cell - The Unit of Life 06 : Introduction to Eukaryotic Cell.json  Cell - The Unit of Life 09 : Endomembrane System.json  Mathematical Tools 10 : Trigono-Verse Part-1.json  Some Basic Concepts of Chemistry 07 : Mole Concept (Part-1) || (NO DPP).json  Vectors 03 : Unit Vectors.json  Vectors 05 : Parallelogram Law.json
