[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "langchain-community>=0.3.24",
    "moviepy>=2.2.1",
    "openai>=1.82.0",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20250506",
    "pi-heif>=0.22.0",
    "pydub>=0.25.1",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.0",
    "pytubefix>=9.1.1",
    "requests>=2.32.3",
    "unstructured>=0.17.2",
    "unstructured-inference>=1.0.2",
    "unstructured.pytesseract>=0.3.12"
]
